[tool.poetry]
name = "dashbord-desafio"
version = "0.1.0"
description = ""
authors = ["Rafael Levi <rafaellevicodur2@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.47.1"
plotly = "^6.2.0"
openpyxl = "^3.1.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
